Change leaderboard title to NOC100 Live Leaderboard

--- a/leaderboard.html
+++ b/leaderboard.html
@@ -412,7 +412,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>URCM Live Leaderboard</h1>
+        <h1>NOC100 Live Leaderboard</h1>
         <div class="last-update" id="lastUpdate">Loading...</div>
 
         <!-- Sponsors Section -->
