Fix white boxes behind logos on mobile - reduce drop-shadow intensity

--- a/index.html
+++ b/index.html
@@ -398,6 +398,8 @@
                 max-width: 100%;
                 width: 100%;
                 object-fit: contain;
+                filter: brightness(1.15) 
+                        drop-shadow(0 2px 8px rgba(0, 0, 0, 0.5));
             }
 
             .sponsor-logo[alt="Maurten"] {
@@ -415,10 +417,7 @@
             .sponsor-logo[alt="Pabst Blue Ribbon"] {
                 max-height: 85px;
                 filter: invert(1) brightness(0) contrast(1.2) 
-                        drop-shadow(0 0 6px rgba(255, 255, 255, 0.6))
-                        drop-shadow(0 0 12px rgba(255, 255, 255, 0.4))
-                        drop-shadow(0 0 18px rgba(255, 255, 255, 0.3))
-                        drop-shadow(0 3px 12px rgba(0, 0, 0, 0.7));
+                        drop-shadow(0 2px 8px rgba(0, 0, 0, 0.5));
             }
 
             .sponsor-logo[alt="HOKA"] {
@@ -465,6 +464,8 @@
                 max-width: 100%;
                 width: auto;
                 object-fit: contain;
+                filter: brightness(1.15) 
+                        drop-shadow(0 2px 8px rgba(0, 0, 0, 0.5));
             }
 
             .sponsor-logo[alt="Maurten"] {
@@ -482,10 +483,7 @@
             .sponsor-logo[alt="Pabst Blue Ribbon"] {
                 max-height: 80px;
                 filter: invert(1) brightness(0) contrast(1.2) 
-                        drop-shadow(0 0 6px rgba(255, 255, 255, 0.6))
-                        drop-shadow(0 0 12px rgba(255, 255, 255, 0.4))
-                        drop-shadow(0 0 18px rgba(255, 255, 255, 0.3))
-                        drop-shadow(0 3px 12px rgba(0, 0, 0, 0.7));
+                        drop-shadow(0 2px 8px rgba(0, 0, 0, 0.5));
             }
 
             .sponsor-logo[alt="HOKA"] {
@@ -503,6 +501,8 @@
 
             .sponsor-logo {
                 max-height: 75px;
+                filter: brightness(1.15) 
+                        drop-shadow(0 2px 8px rgba(0, 0, 0, 0.5));
             }
 
             .sponsor-logo[alt="Maurten"] {
@@ -520,10 +520,7 @@
             .sponsor-logo[alt="Pabst Blue Ribbon"] {
                 max-height: 70px;
                 filter: invert(1) brightness(0) contrast(1.2) 
-                        drop-shadow(0 0 6px rgba(255, 255, 255, 0.6))
-                        drop-shadow(0 0 12px rgba(255, 255, 255, 0.4))
-                        drop-shadow(0 0 18px rgba(255, 255, 255, 0.3))
-                        drop-shadow(0 3px 12px rgba(0, 0, 0, 0.7));
+                        drop-shadow(0 2px 8px rgba(0, 0, 0, 0.5));
             }
 
             .sponsor-logo[alt="HOKA"] {
