Fix mobile hover state drop-shadow to prevent white boxes

--- a/index.html
+++ b/index.html
@@ -271,10 +271,12 @@
             .sponsor-logo:hover {
                 transform: none;
                 filter: brightness(1.15) 
-                        drop-shadow(0 0 6px rgba(255, 255, 255, 0.6))
-                        drop-shadow(0 0 12px rgba(255, 255, 255, 0.4))
-                        drop-shadow(0 0 18px rgba(255, 255, 255, 0.3))
-                        drop-shadow(0 3px 12px rgba(0, 0, 0, 0.7));
+                        drop-shadow(0 2px 8px rgba(0, 0, 0, 0.5));
+            }
+            
+            .sponsor-logo[alt="Pabst Blue Ribbon"]:hover {
+                filter: invert(1) brightness(0) contrast(1.2) 
+                        drop-shadow(0 2px 8px rgba(0, 0, 0, 0.5));
             }
             
             .sponsor-logo[alt="Pabst Blue Ribbon"]:hover {
