Make sponsor logos non-clickable on desktop and mobile

--- a/index.html
+++ b/index.html
@@ -212,6 +212,8 @@
             flex: 0 0 auto;
             min-width: 0;
             flex-shrink: 0;
+            pointer-events: none;
+            cursor: default;
         }
 
         .sponsor-logo {
@@ -227,6 +229,10 @@
                     drop-shadow(0 3px 12px rgba(0, 0, 0, 0.7));
             opacity: 0.95;
             transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+            pointer-events: none;
+            cursor: default;
+            user-select: none;
+            -webkit-user-select: none;
         }
         
         /* HOKA logo - bigger on desktop only */
