Fix HOKA logo - use filename without spaces

--- a/index.html
+++ b/index.html
@@ -835,7 +835,7 @@
             <img src="sponsors/Pabst Blue Ribbon.png" alt="Pabst Blue Ribbon" class="sponsor-logo">
         </div>
         <div class="sponsor-item">
-            <img src="sponsors/Hoka%20-%20PNG%20white.png" alt="HOKA" class="sponsor-logo">
+            <img src="sponsors/Hoka-white.png" alt="HOKA" class="sponsor-logo">
         </div>
     </div>
 
