Add sponsor logos banner above 100km Solo section and update HOKA logo filename

--- a/leaderboard.html
+++ b/leaderboard.html
@@ -441,7 +441,7 @@
                 <img src="sponsors/Pabst Blue Ribbon.png" alt="Pabst Blue Ribbon" class="sponsor-logo">
             </div>
             <div class="sponsor-item">
-                <img src="sponsors/HOKA.png" alt="HOKA" class="sponsor-logo">
+                <img src="sponsors/Hoka-white.png" alt="HOKA" class="sponsor-logo">
             </div>
         </div>
 
@@ -462,6 +462,25 @@
                         <div>Distance</div>
                     </div>
                     <div id="teams-list"></div>
+                </div>
+            </div>
+
+            <!-- Sponsors Section - Above 100km Solo -->
+            <div class="sponsors-section">
+                <div class="sponsor-item">
+                    <img src="sponsors/maurten.png" alt="Maurten" class="sponsor-logo">
+                </div>
+                <div class="sponsor-item">
+                    <img src="sponsors/ciele athletics.png" alt="Ciele Athletics" class="sponsor-logo">
+                </div>
+                <div class="sponsor-item">
+                    <img src="sponsors/fenix.webp" alt="Fenix" class="sponsor-logo">
+                </div>
+                <div class="sponsor-item">
+                    <img src="sponsors/Pabst Blue Ribbon.png" alt="Pabst Blue Ribbon" class="sponsor-logo">
+                </div>
+                <div class="sponsor-item">
+                    <img src="sponsors/Hoka-white.png" alt="HOKA" class="sponsor-logo">
                 </div>
             </div>
 
