Make HOKA logo black on leaderboard page

--- a/leaderboard.html
+++ b/leaderboard.html
@@ -338,6 +338,19 @@
 
         .sponsor-logo[alt="HOKA"] {
             max-height: 85px;
+            filter: invert(1) brightness(0) 
+                    drop-shadow(0 0 6px rgba(255, 255, 255, 0.6))
+                    drop-shadow(0 0 12px rgba(255, 255, 255, 0.4))
+                    drop-shadow(0 0 18px rgba(255, 255, 255, 0.3))
+                    drop-shadow(0 3px 12px rgba(0, 0, 0, 0.7));
+        }
+        
+        .sponsor-logo[alt="HOKA"]:hover {
+            filter: invert(1) brightness(0) 
+                    drop-shadow(0 0 10px rgba(255, 255, 255, 0.8))
+                    drop-shadow(0 0 16px rgba(255, 255, 255, 0.6))
+                    drop-shadow(0 0 24px rgba(255, 255, 255, 0.4))
+                    drop-shadow(0 5px 20px rgba(0, 0, 0, 0.9));
         }
 
         /* Mobile responsive */
@@ -374,6 +387,8 @@
 
             .sponsor-logo[alt="HOKA"] {
                 max-height: 60px;
+                filter: invert(1) brightness(0) 
+                        drop-shadow(0 2px 8px rgba(0, 0, 0, 0.5));
             }
         }
 
