Fix HOKA logo black filter on mobile breakpoint

--- a/leaderboard.html
+++ b/leaderboard.html
@@ -432,6 +432,8 @@
 
             .sponsor-logo[alt="HOKA"] {
                 max-height: 50px;
+                filter: invert(1) brightness(0) 
+                        drop-shadow(0 2px 8px rgba(0, 0, 0, 0.5));
             }
         }
     </style>
