--- a/leaderboard.html
+++ b/leaderboard.html
@@ -342,7 +342,7 @@
                     drop-shadow(0 0 6px rgba(255, 255, 255, 0.6))
                     drop-shadow(0 0 12px rgba(255, 255, 255, 0.4))
                     drop-shadow(0 0 18px rgba(255, 255, 255, 0.3))
-                    drop-shadow(0 3px 12px rgba(0, 0, 0, 0.7));
+                    drop-shadow(0 3px 12px rgba(0, 0, 0, 0.7)) !important;
         }
         
         .sponsor-logo[alt="HOKA"]:hover {
@@ -350,7 +350,7 @@
                     drop-shadow(0 0 10px rgba(255, 255, 255, 0.8))
                     drop-shadow(0 0 16px rgba(255, 255, 255, 0.6))
                     drop-shadow(0 0 24px rgba(255, 255, 255, 0.4))
-                    drop-shadow(0 5px 20px rgba(0, 0, 0, 0.9));
+                    drop-shadow(0 5px 20px rgba(0, 0, 0, 0.9)) !important;
         }
 
         /* Mobile responsive */
@@ -388,7 +388,7 @@
             .sponsor-logo[alt="HOKA"] {
                 max-height: 60px;
                 filter: invert(1) brightness(0) 
-                        drop-shadow(0 2px 8px rgba(0, 0, 0, 0.5));
+                        drop-shadow(0 2px 8px rgba(0, 0, 0, 0.5)) !important;
             }
         }
 
@@ -433,7 +433,7 @@
             .sponsor-logo[alt="HOKA"] {
                 max-height: 50px;
                 filter: invert(1) brightness(0) 
-                        drop-shadow(0 2px 8px rgba(0, 0, 0, 0.5));
+                        drop-shadow(0 2px 8px rgba(0, 0, 0, 0.5)) !important;
             }
         }
     </style>
