Add white glow effect to HOKA logo on mobile in leaderboard

--- a/leaderboard.html
+++ b/leaderboard.html
@@ -388,7 +388,10 @@
             .sponsor-logo[alt="HOKA"] {
                 max-height: 60px;
                 filter: invert(1) brightness(0) 
-                        drop-shadow(0 2px 8px rgba(0, 0, 0, 0.5)) !important;
+                        drop-shadow(0 0 6px rgba(255, 255, 255, 0.6))
+                        drop-shadow(0 0 12px rgba(255, 255, 255, 0.4))
+                        drop-shadow(0 0 18px rgba(255, 255, 255, 0.3))
+                        drop-shadow(0 3px 12px rgba(0, 0, 0, 0.7)) !important;
             }
         }
 
@@ -433,7 +436,10 @@
             .sponsor-logo[alt="HOKA"] {
                 max-height: 50px;
                 filter: invert(1) brightness(0) 
-                        drop-shadow(0 2px 8px rgba(0, 0, 0, 0.5)) !important;
+                        drop-shadow(0 0 6px rgba(255, 255, 255, 0.6))
+                        drop-shadow(0 0 12px rgba(255, 255, 255, 0.4))
+                        drop-shadow(0 0 18px rgba(255, 255, 255, 0.3))
+                        drop-shadow(0 3px 12px rgba(0, 0, 0, 0.7)) !important;
             }
         }
     </style>
