--- a/index.html
+++ b/index.html
@@ -210,7 +210,9 @@
             padding: 0 15px;
             flex: 0 0 auto;
             min-width: 0;
-            flex-shrink: 0;
+            flex-shrink: 1;
+            max-width: 100%;
+            overflow: hidden;
             pointer-events: none;
             cursor: default;
         }
