Fix overflow issue - allow glow effects to show smoothly on desktop

--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
             min-width: 0;
             flex-shrink: 1;
             max-width: 100%;
-            overflow: hidden;
+            overflow: visible;
             pointer-events: none;
             cursor: default;
         }
@@ -234,6 +234,7 @@
             cursor: default;
             user-select: none;
             -webkit-user-select: none;
+            box-sizing: content-box;
         }
         
         /* HOKA logo - make white logo black with same glow */
