--- a/index.html
+++ b/index.html
@@ -629,7 +629,8 @@
         
         .tickets-button-container .tickets-button,
         .tickets-button-container .leaderboard-button,
-        .tickets-button-container .runner-guide-button {
+        .tickets-button-container .runner-guide-button,
+        .tickets-button-container .merchandise-button {
             pointer-events: auto;
         }
         
@@ -682,9 +683,10 @@
             transform: translateY(0) scale(1.02);
         }
 
-        /* Leaderboard and Runner Guide Buttons - same style as tickets button */
+        /* Leaderboard, Runner Guide, and Merchandise Buttons - same style as tickets button */
         .leaderboard-button,
-        .runner-guide-button {
+        .runner-guide-button,
+        .merchandise-button {
             display: inline-block;
             padding: 12px 30px;
             background: rgba(255, 255, 255, 0.95);
@@ -708,7 +710,8 @@
         }
 
         .leaderboard-button:hover,
-        .runner-guide-button:hover {
+        .runner-guide-button:hover,
+        .merchandise-button:hover {
             transform: translateY(-2px) scale(1.05);
             box-shadow: 0 0 15px rgba(255, 255, 255, 0.8),
                         0 0 25px rgba(255, 255, 255, 0.6),
@@ -718,7 +721,8 @@
         }
 
         .leaderboard-button:active,
-        .runner-guide-button:active {
+        .runner-guide-button:active,
+        .merchandise-button:active {
             transform: translateY(0) scale(1.02);
         }
 
@@ -739,7 +743,8 @@
 
             .tickets-button,
             .leaderboard-button,
-            .runner-guide-button {
+            .runner-guide-button,
+            .merchandise-button {
                 padding: 11px 26px;
                 font-size: 15px;
             }
@@ -764,7 +769,8 @@
 
             .tickets-button,
             .leaderboard-button,
-            .runner-guide-button {
+            .runner-guide-button,
+            .merchandise-button {
                 padding: 10px 22px;
                 font-size: 14px;
                 pointer-events: auto;
@@ -782,7 +788,8 @@
 
             .tickets-button-container .tickets-button,
             .tickets-button-container .leaderboard-button,
-            .tickets-button-container .runner-guide-button {
+            .tickets-button-container .runner-guide-button,
+            .tickets-button-container .merchandise-button {
                 pointer-events: auto;
             }
         }
@@ -798,7 +805,8 @@
 
             .tickets-button,
             .leaderboard-button,
-            .runner-guide-button {
+            .runner-guide-button,
+            .merchandise-button {
                 padding: 9px 20px;
                 font-size: 13px;
             }
@@ -835,6 +843,7 @@
         <a href="https://simpli.events/e/NOC100" target="_blank" class="tickets-button">Get Tickets</a>
         <a href="leaderboard.html" class="leaderboard-button">Leaderboard</a>
         <a href="RUNNERS%20GUIDE%20%282026%29.pdf" target="_blank" class="runner-guide-button">Runner Guide</a>
+        <a href="https://urcm-events.bigcartel.com/products?utm_source=ig&utm_medium=social&utm_content=link_in_bio&fbclid=PAZXh0bgNhZW0CMTEAc3J0YwZhcHBfaWQMMjU2MjgxMDQwNTU4AAGnHWIXZeagLfEwBfifp-Mlz2ejEP9eyCG6n9DLcKgN8uXROivEsmhuodk6_LM_aem_SXSwIwRp3oKPNuQ0A_VkWQ" target="_blank" class="merchandise-button">Merchandise</a>
     </div>
 
     <!-- Sponsors Section -->
